# wind-support-lca-rank-fragility

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
analysis/: activefloat_rebar_unit_endpoints.csv  analytic_corner_bounds.csv  analytic_rating_transfer.csv  baseline_15mw_support_results.csv  boundary_layer_rank_shifts.csv  component_contributions.csv  conditional_sample_summary.csv  data_resolution_thresholds.csv  figure_1_plot_data.csv  figure_2_heatmap_values.csv  input_and_result_qa.csv  inventory_correction_effects.csv  missing_burden_parity_thresholds.csv  pairwise_rank_fragility.csv  rank_distribution.csv  robustness_ab_reported_material_ordering.csv  robustness_matrix_pairwise.csv  run_metadata.json
data/: capacity_factor_inputs.csv  eol_credit_inputs.csv  material_coefficients.csv  materials_model_input.csv  model_assumptions.json  structural_inventory_public_proxy.csv
docs/: consistency_check_log.txt  data_dictionary.md  github_release_description.md  proprietary_data_note.md  release_checklist.md  reproduction_instructions.md
figures/: figure_manifest.json
figures/exported_figures/: Fig1.eps  Fig2.eps  Fig3.eps
figures/figure_source_data/: bottom_fixed_onshore_gap_summary.csv  fairness_f1_sensitivity_raw.csv  fig1_cfrp_delta_by_power_base.csv  fig1_cfrp_delta_by_power_fawt.csv  fig1_cfrp_phase_delta_15mw.csv  fig4_rank_fragility_pairwise.csv  fig9_uncertainty_envelope_intensity_15mw.csv  uncertainty_interval_summary.csv
inputs/: analysis_parameters.json  boundary_exclusions.csv  case_manifest.csv  evidence_profile.csv  legacy_mapping_audit.csv  missing_boundary_items.csv  physical_mass_register.csv  robustness_scenarios.json  source_register.csv  support_components.csv
notebooks/: README.md
results/: 80_case_result_matrix.csv  benchmark_range_check.csv  bop_cf_break_even.csv  capacity_factor_sensitivity.csv  cfrp_break_even_aep.csv  eol_sensitivity.csv  fawt_mass_sensitivity_summary.csv  lifetime_sensitivity_summary.csv  mc_convergence_summary.csv  monte_carlo_summary.csv  o_and_m_sensitivity.csv  prcc_summary.csv  rank_fragility_pairwise.csv  rr_rc_decomposition_summary_base.csv  rr_rc_decomposition_summary_fawt46.csv  tie_threshold_sensitivity.csv
scripts/: README.md  check_submission_consistency.py  generate_ijlca_coefficient_mc.py  generate_ijlca_maintext_figures.py  generate_ijlca_strengthening_outputs.py  generate_v6_extension_outputs.py  plot_mc_convergence.py  run_analysis.py  run_backcasting_validation.py  run_cf_equalized_sensitivity.py  run_cfrp_crossover_analysis.py  run_eol_sensitivity.py  run_fawt_mass_sensitivity.py  run_lifetime_sensitivity.py  run_mc_uncertainty.py  run_rank_reversal_analysis.py  run_sensitivity_analysis.py
src/: __init__.py  analysis.py
src/boundary/: __init__.py
src/cli/: README.md  __init__.py  main.py
src/cli/commands/: __init__.py  compare.py  matrix.py  plot.py  run.py  validate.py
src/lca/: README.md  __init__.py  calculator.py  gwp.py  uncertainty.py  weight_cascade.py
src/lci/: README.md  __init__.py  loaders.py  models.py  validators.py
src/utils/: manifest.py
src/viz/: README.md  __init__.py  export.py  plots.py  styles.py  styles.yaml
tests/: test_analysis.py
