[project]
name = "wind-support-source-audit-rank-fragility"
version = "1.1.0"
description = "Reproducible source-audited climate screening of public 15 MW wind-support substructures"
requires-python = ">=3.11,<3.13"
dependencies = [
  "matplotlib==3.10.8",
  "numpy==2.4.2",
  "pandas==3.0.1",
  "scipy==1.17.1",
]

[dependency-groups]
dev = ["pytest==9.0.2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
